add some build util scripts

--- a/snes9x.html
+++ b/snes9x.html
@@ -205,5 +205,9 @@ html, body { overflow: auto }
 
   <div id="roms">No ROM files (games) have been entered yet.</div>
 
+  <label for="savefolder">Choose new save folder </label>
+  <input type="button" id="savefolder" value="Choose save folder">
+
+
 </body>
 </html>
